# nand2tetris

./: .editorconfig  .gitignore  README.md  meson.build
01/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or8Way.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl  Inc16.hdl
03/a/: And1With16.hdl  Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm
04/mult/: mult.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl
12/: Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
HackAssembler/: comp-symbols.gperf  hasm-cmd.c  hasm-test.c  hasm.c  hasm.h  jump-symbols.gperf  meson.build  predefined-symbols.gperf
JackCompiler/: jack-compiler-cmd.c  jack-compiler-tmp.c  jack-compiler.c  jack-compiler.h  jack-literals.gperf  jack-symbol-table.h  jack-token.h  jack-tokenizer-cmd.c  jack-tokenizer.c  jack-tokenizer.h  meson.build
VMTranslator/: README.md  command-table.gperf  hvm-cmd.c  hvm-defs.h  hvm.c  hvm.h  meson.build  segment-table.gperf
VMTranslator/v1/: GNUmakefile  command-table.gperf  hvm-cmd.c  hvm-defs.h  hvm.c  hvm.h  meson.build  segment-table.gperf
common/: README.md  meson.build  n2t-common.c  n2t-common.h  vector.h
